@@ -1,7 +1,5 @@
 #include "HtmlLinks.h"
 
-
-
 HtmlLink::HtmlLink(const HtmlLink& x){
   Xmin=x.Xmin;
   Ymin=x.Ymin;
